--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 /REACT_APP_API = https://back.ankasa.online
-REACT_APP_API = http://localhost:8000
+REACT_APP_API = https://back-ankasa.herokuapp.com
